Fix overflowing note titles

--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -119,6 +119,9 @@
 .noteLink {
   text-decoration: none;
   color:var(--dashboard-note-text);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .noteLink:visited,
